2012-08-18  klen

	* Version 0.1.4
	* Minor release
	* mixer.random

2012-08-13  klen

	* Version 0.1.0
	* Initial release